<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="9dp"
        android:text="@string/naverMainText"
        android:textColor="@color/default_naver_login_text_color"
        android:textSize="14dp" />

    <android.widget.Button
        android:id="@+id/mainNaverLoginButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/loginbutton_background"
        android:gravity="center"
        android:text="@string/naverLogin"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/searchUserInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapLoginMenuContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="9dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/default_naver_login_text_color"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="14dp"
            android:gravity="center"
            android:text="@string/searchUserInfoContainerSeparator"
            android:textColor="@color/default_naver_login_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:text="@string/findID"
            android:textColor="@color/default_naver_login_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="14dp"
            android:text="@string/searchUserInfoContainerSeparator"
            android:textColor="@color/default_naver_login_text_color" />

        <TextView
            android:id="@+id/mainUserSignUPText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="9dp"
            android:text="@string/signUP"
            android:textColor="@color/default_naver_login_text_color" />

    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>