<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:entries="@array/contry_spinner_array"
            app:layout_constraintStart_toStartOf="@+id/scrollContainer" />

        <ImageView
            android:id="@+id/naverLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countrySpinner"
            app:srcCompat="@drawable/naver_logo_default" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="#fff000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/naverLogoImage">

            <LinearLayout
                android:id="@+id/TapImageViewLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@drawable/radio_button_border_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/defaultLoginImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <ImageView
                    android:id="@+id/oneTimePasswordImageview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <ImageView
                    android:id="@+id/qrCodeLoginImageview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_foreground" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tapLoginMenuContainer"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@drawable/radio_button_border_on"
                android:orientation="vertical"
                android:paddingHorizontal="28dp"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/TapImageViewLayout">

                <EditText
                    android:id="@+id/idTextView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/userID" />

                <EditText
                    android:id="@+id/pwTextView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/userPassword" />

                <LinearLayout
                    android:id="@+id/login_IP_LinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/keepLoginState" />

                    <!-- 아래 view 코드를 사용하여 checkBox와 switch간 between 정렬 가능-->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/IPSecuritySwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/IPSecurity" />

                </LinearLayout>

                <android.widget.Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/loginbutton_background"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchUserInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#00fff0"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tapLoginMenuContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/forgotPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/searchUserInfoContainerSeparator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/findID" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/searchUserInfoContainerSeparator" />

                <TextView
                    android:id="@+id/userSignUP"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/signUP" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            app:srcCompat="@drawable/add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="63dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/termsOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termsOfService" />

            <TextView
                android:id="@+id/footSeparator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchUserInfoContainerSeparator" />

            <TextView
                android:id="@+id/privacyPolice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolice"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/footSeparator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchUserInfoContainerSeparator" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legal" />

            <TextView
                android:id="@+id/footSeparator3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchUserInfoContainerSeparator" />

            <TextView
                android:id="@+id/memberInfoCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="d" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/footer_naver_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:srcCompat="@drawable/naver_logo_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_menu_footer" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>