<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingVertical="19dp"
    android:paddingStart="20dp"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/naverLogoImage"
        android:layout_width="130dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/naver_logo_small_146x30" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naverLogoImage">

        <LinearLayout
            android:id="@+id/realUserNameCheckBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="@string/signUPRealUsernameID" />

            <android.widget.CheckBox
                android:id="@+id/signUPRealUsernameIDCheckBox"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@drawable/checkbox_selector"
                android:button="@null" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/signUPContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radio_button_border_off"
            android:orientation="vertical"
            android:padding="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/realUserNameCheckBoxLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingEnd="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userIcon_ID"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/signup_user_id_img_selector" />

                <EditText
                    android:id="@+id/editUserID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/userID" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/top_bottom_line"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/signup_user_password_img_selector" />

                <EditText
                    android:id="@+id/editUserPW"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/userPassword" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/signup_user_email_img_selector" />

                <android.widget.EditText
                    android:id="@+id/editUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/chooseEmail" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userPrivacyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="1dp"
            android:background="@drawable/radio_button_border_off"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUPContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userIcon_Name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/signup_user_id_img_selector" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/userName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/top_bottom_line"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userBirthday8digit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/signup_user_birthday_8digit_img_selector" />

                <EditText
                    android:id="@+id/birthday8digit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/userBirthdate8digit" />
            </LinearLayout>

            <Spinner
                android:id="@+id/mobileCarrierSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/scrollContainer" />

            <LinearLayout
                android:id="@+id/chooseMaleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="9dp">

                <RadioGroup
                    android:id="@+id/radioGroupChooseMale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/radio_button_border_off"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/male_Man"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:background="@drawable/right_left_line"
                        android:text="@string/male_Woman"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/notChoice"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userMaleAndForeignOrDomestic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="9dp"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/radioGroupChooseMaleAndForeignOrDomestic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/signup_radiobutton_selector_button"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/male_Man"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/signup_radiobutton_selector_button"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/male_Woman"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />
                </RadioGroup>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="9dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/signup_radiobutton_selector_button"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/foreign"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/signup_radiobutton_selector_button"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/domestic"
                        android:textColor="@drawable/signup_radiobutton_selector_textcolor" />
                </RadioGroup>
            </LinearLayout>

            <Spinner
                android:id="@+id/countryNumberSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/top_bottom_line"
                android:entries="@array/contry_spinner_array"
                app:layout_constraintStart_toStartOf="@+id/scrollContainer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cellPhone_Icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/signup_user_cellphone_number_selector" />

                <EditText
                    android:id="@+id/userPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/cellphoneNumber" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/certificationTermsandConditionsLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/radio_button_border_off"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="9dp"
            app:layout_constraintTop_toBottomOf="@+id/userPrivacyContainer">

            <android.widget.CheckBox
                android:id="@+id/certificationTermsandConditionsCheckBox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/check_box_icon_non_click"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="10sp"
                android:textColor="#09AA5C"
                android:text="@string/essential"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/certificationTermsandConditions" />

            <android.widget.Button
                android:id="@+id/expantionButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/expansion_certification_img_selector" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>